--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <link href="https://fonts.googleapis.com/css?family=Play" rel="stylesheet">
 
 
-  <link id="css-load" rel="stylesheet" href="%PUBLIC_URL%/chatStyle.css">
+  <link id="css-load" rel="stylesheet" href="chatStyle.css">
 
   <title>Join | Hangman</title>
 </head>
