--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-  <meta name="theme-color" content="#000000">
 
+
+  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon_package/apple-touch-icon.png?v=xQdkG4bMzP">
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon_package/favicon-32x32.png?v=xQdkG4bMzP">
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon_package/favicon-16x16.png?v=xQdkG4bMzP">
+  <link rel="manifest" href="%PUBLIC_URL%/favicon_package/site.webmanifest?v=xQdkG4bMzP">
+  <link rel="mask-icon" href="%PUBLIC_URL%/favicon_package/safari-pinned-tab.svg?v=xQdkG4bMzP" color="#5bbad5">
+  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon_package/favicon.ico?v=xQdkG4bMzP">
+  <meta name="apple-mobile-web-app-title" content="Hangman">
+  <meta name="application-name" content="Hangman">
+  <meta name="msapplication-TileColor" content="#da532c">
+
+  <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
     crossorigin="anonymous">
