--- a/public/index.html
+++ b/public/index.html
@@ -6,12 +6,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 
-  <link rel="apple-touch-icon" sizes="180x180" href="%PUBLIC_URL%/favicon_package/apple-touch-icon.png?v=xQdkG4bMzP">
-  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon_package/favicon-32x32.png?v=xQdkG4bMzP">
-  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon_package/favicon-16x16.png?v=xQdkG4bMzP">
-  <link rel="manifest" href="%PUBLIC_URL%/favicon_package/site.webmanifest?v=xQdkG4bMzP">
-  <link rel="mask-icon" href="%PUBLIC_URL%/favicon_package/safari-pinned-tab.svg?v=xQdkG4bMzP" color="#5bbad5">
-  <link rel="shortcut icon" href="%PUBLIC_URL%/favicon_package/favicon.ico?v=xQdkG4bMzP">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=xQdkG4bMzP">
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=xQdkG4bMzP">
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=xQdkG4bMzP">
+  <link rel="manifest" href="/site.webmanifest?v=xQdkG4bMzP">
+  <link rel="mask-icon" href="/safari-pinned-tab.svg?v=xQdkG4bMzP" color="#5bbad5">
+  <link rel="shortcut icon" href="/favicon.ico?v=xQdkG4bMzP">
   <meta name="apple-mobile-web-app-title" content="Hangman">
   <meta name="application-name" content="Hangman">
   <meta name="msapplication-TileColor" content="#da532c">
